Bug 1898609 - Avoid showing the refresh firefox infobar prompt on first startup after profile refresh r=migration-reviewers,mconley,mossop

This patch prevents the refresh firefox infobar prompt from appearing on top of about:welcome after users refresh their profile via the stub installer.

It also provides a foundation for differentiating the activation/onboarding experience for returning users who are reinstalling firefox.

Differential Revision: https://phabricator.services.mozilla.com/D217301